fix(YALB-1442): Fix contrast ratio for title
Wool was so close to getting to the correct contrast ratio, but it
wasn't quite there.  This now allows it to cross that threshold to
accomodate A11y.

--- a/css/ckeditor-overrides.css
+++ b/css/ckeditor-overrides.css
@@ -45,7 +45,7 @@
 /* Make the title similar to other titles on the admin side */
 .cke_dialog .cke_dialog_title {
   background: var(--mediterranean-blue) !important;
-  color: var(--wool) !important;
+  color: #fff !important;
 }
 
 /* Make the body color similar to the other displays on the admin side */
